# AUV-Real-Time-Interpolation

./: README.md
GEBCO-Data/East-Pacific Rise/GEBCO_05_May_2025_c75e2141a65d/: gebco_2024_n12.085_s7.9541_w-112.0496_e-105.9851.nc
GEBCO-Data/GEBCO_14_Mar_2025_9471568999c2/: gebco_2024_n39.6304_s39.3668_w-65.3632_e-65.1105.nc
GEBCO-Data/GEBCO_28_Feb_2025_5615bda1e072/: gebco_2024_n38.2361_s33.7129_w-73.5773_e-70.4713.nc  gebco_2024_tid_n38.2361_s33.7129_w-73.5773_e-70.4713.nc
GEBCO-Data/Mariana Trench/GEBCO_05_May_2025_1bf90a8fdc83/: gebco_2024_n13.0188_s9.0088_w137.9828_e142.0148.nc
GEBCO-Data/Mid-Atlantic Ridge/GEBCO_05_May_2025_861eace686e1/: gebco_2024_n1.0071_s-0.5035_w-30.9967_e-29.4993.nc
code/: CMakeLists.txt  generate_csv_grids.cpp  graph_results.ipynb  import_data.ipynb  main.cpp  main.py  performance_results.ipynb  subset_bathymetry.py  test_cpu_gpu_results.ipynb  test_gebco.cpp  test_interpolation.cpp  test_interpolation.py
code/include/: GridD.h  GridH.h  Point.h  error_calculator.h
code/src/: GridD.cu  GridH.cpp  error_calculator.cpp  kernels.cu
results/: EastPacific_runtimes_errors.csv  Kerguelen_runtimes_errors.csv  Mariana_runtimes_errors.csv  MidAtlantic_runtimes_errors.csv  TestingResults1.csv  TestingResults1.xlsx  grid_A_runtimes_averaged.csv  times_validationStatus_results_1.docx  times_validationStatus_results_2.docx
writing/: RealTimeInterpolation_ExperimentalDataUpdate.pptx
